--- a/style.css
+++ b/style.css
@@ -6,15 +6,19 @@ body {
 
 .about-container{
     background-color: #fff;
-    border-radius: 12px;
+    border-radius: 7px;
+    border: 1px solid #809bf3;
     padding: 22px;
     margin: 20px;
     box-shadow: 0 0 9px rgba(0, 0, 0, 0.3);
 }
 
 img.About-Me {
-    width: 100px;
-    height: 100px;
+    max-width: 100px;
+    height: auto;
     border-radius: 50%;
     margin-bottom: 11px;
+}
+a{
+    color: rgba(235, 105, 150);
 }
