--- a/style.css
+++ b/style.css
@@ -12,9 +12,13 @@ body {
     margin: 20px;
     box-shadow: 0 0 9px rgba(0, 0, 0, 0.3);
 }
+ h1{
+    color: aqua;
+    font-size: 30px;
 
-img.About-Me {
-    max-width: 100px;
+ }
+.AboutMe-img {
+    max-width: 40vh;
     height: auto;
     border-radius: 50%;
     margin-bottom: 11px;
