--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ body {
 
  }
 
+ 
  .container-img{
-    width: 40%;
-    height: 20%;
+    width: 40px;
+    height: 20px;
  }
 .AboutMe {
     max-width: 60vh;
