--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
  }
 
- .current-container-p{
+ .container-p{
     background-color: #fff;
     border-radius: 7px;
     border: 1px solid #809bf3;
