--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     font-size: 30px;
 }
 
- .current-p{
+ .current{
     background-color: #fff;
     border-radius: 7px;
     border: 1px solid #809bf3;
