--- a/style.css
+++ b/style.css
@@ -17,19 +17,13 @@ body {
     font-size: 30px;
 }
 
- .current{
+ .current-p{
     background-color: #fff;
     border-radius: 7px;
     border: 1px solid #809bf3;
     padding: 22px;
 }
-
-p{
-    font-size: 16px;
-    color: rgb(42, 19, 43);
-}
-
- img{
+img{
     width: 200px;
     height: auto;
  }
